--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <span class="f-left">  
       <a href="{{ site.baseurl }}/">
         <h1>
-          <span>mono</span>chrome
+          <span>Young-Geun Choi (최영근)</span>
         </h1>
       </a>
     </span>
