--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,11 +26,10 @@
 		  
 		<main>
 
-			{{ content }}
+			{{ content }}      
 
 	  </main>
-		
-		  <!-- Pagination links -->
+		  <!-- Pagination links -->}
       {% if paginator.total_pages > 1 %}
         <div class="pagination">
           {% if paginator.previous_page == 1 %}
@@ -58,6 +57,7 @@
           {% endif %}
         </div>
         {% endif %}
+
 
 	  </div>
 	    
