no blog and statistic

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 			{{ content }}      
 
 	  </main>
-		  <!-- Pagination links -->}
+		  <!-- Pagination links -->
       {% if paginator.total_pages > 1 %}
         <div class="pagination">
           {% if paginator.previous_page == 1 %}
